[package]
name = "atomic-array"
version = "0.3.1"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Defines several array types in which elements may be updated atomically. Intended to provide atomic array types similar to those found in java.util.concurrent.atomic in Java."
keywords = ["atomic", "array"]
categories = ["asynchronous", "concurrency", "data-structures"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mehcode/atomic-array-rs"

[dependencies]
atomic-ref2 = "0.2"
